Dix close icon alignment issue in autocomplete for 3 main resolutions

--- a/components/src/core/components/Input/Autocomplete/autocomplete-input.scss
+++ b/components/src/core/components/Input/Autocomplete/autocomplete-input.scss
@@ -217,6 +217,13 @@
     &:focus-within {
       border: $oxd-input-border--focus;
     }
+    :deep(.oxd-icon-button ) {
+      [class^='bi-']::before,
+      [class*=' bi-']::before {
+        line-height: inherit;
+        display: flex;
+      }
+    }
   }
   &:empty {
     display: none;
